# beston-appchain-ai

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  README.zh_CN.md  __init__.py  app.custom.yaml  app.py  app.standard.yaml  chainlit.md  docker-compose.yml  pyproject.toml  requirements.txt
.chainlit/: config.toml
regular/: weather.py
vvhan/: horoscope.py
